alignment fixed

--- a/site/style.css
+++ b/site/style.css
@@ -286,6 +286,9 @@ footer img{
     .ranges{
         display: block;
     }
+    .content{
+        padding: 10px;
+    }
 }
 
 @media screen and (min-width: 769px){
